--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ tzdata==2025.2
 djangorestframework==3.15.2
 Pillow==10.4.0
 django-filter==24.2
+djangorestframework-simplejwt==5.3.1
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
