--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 asgiref==3.9.1
 Django==5.2.6
+django-filter==24.2
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.1
+pillow==10.4.0
+PyJWT==2.10.1
 sqlparse==0.5.3
 tzdata==2025.2
-djangorestframework==3.15.2
-Pillow==10.4.0
-django-filter==24.2
-djangorestframework-simplejwt==5.3.1
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
