--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.1
 pillow==10.4.0
 PyJWT==2.10.1
+python-decouple==3.8
 sqlparse==0.5.3
 tzdata==2025.2
